Add Web.config.RingoPortal exclude file
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40413

--- a/CarrierPortal/Code/CarrierPortal.Web/CarrierPortal.Web.csproj
+++ b/CarrierPortal/Code/CarrierPortal.Web/CarrierPortal.Web.csproj
@@ -452,6 +452,7 @@
       <DependentUpon>Web.config.exclude</DependentUpon>
     </None>
     <Content Include="Web.config.PartnerPortal.exclude" />
+    <Content Include="Web.config.RingoPortal.exclude" />
     <None Include="Web.config.Release.exclude">
       <DependentUpon>Web.config.exclude</DependentUpon>
     </None>
