--- a/Vanrise/Code/Vanrise.GenericData.Notification/Vanrise.GenericData.Notification.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.Notification/Vanrise.GenericData.Notification.csproj
@@ -57,8 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
-    <Compile Include="DataRecord\DataRecordActionRuleExtendedSettings.cs" />
-    <Compile Include="DataRecord\DataRecordActionRuleTypeSettings.cs" />
+    <Compile Include="DataRecord\DataRecordAlertRuleExtendedSettings.cs" />
+    <Compile Include="DataRecord\DataRecordAlertRuleTypeSettings.cs" />
     <Compile Include="DataRecord\DataRecordActionTargetType.cs" />
     <Compile Include="DataRecord\DataRecordAlertRuleConfig.cs" />
     <Compile Include="DataRecord\DataRecordAlertRuleNotificationManager.cs" />
@@ -75,12 +75,16 @@
     <Compile Include="DataRecord\RecordFilterAlertRuleConfig.cs" />
     <Compile Include="DataRecord\Filters\IVRNotificationTypeFilter\DataRecordNotificationTypeFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DataRecord\QueueActivators\DataRecordCheckActionRulesQueueActivator.cs" />
+    <Compile Include="DataRecord\QueueActivators\DataRecordCheckAlertRulesQueueActivator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Common.Business\Vanrise.Common.Business.csproj">
       <Project>{571a68ec-2d45-4b5c-9e75-bb6fb7c0d7b7}</Project>
       <Name>Vanrise.Common.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
+      <Project>{1a350b7c-28ea-4824-b9a0-c60ad25f0ea9}</Project>
+      <Name>Vanrise.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
       <Project>{cfecfd8a-51f6-4020-9f80-fb334684fa3d}</Project>
