--- a/BusinessProcess/Code/Vanrise.Reprocess.Web/Vanrise.Reprocess.Web.csproj
+++ b/BusinessProcess/Code/Vanrise.Reprocess.Web/Vanrise.Reprocess.Web.csproj
@@ -151,6 +151,7 @@
     <Content Include="Reprocess\Directives\ReprocessInput\Templates\ReprocessProcessTemplate.html" />
     <Content Include="Reprocess\Directives\ScheduleTask\reprocess-reprocessprocesstask.js" />
     <Content Include="Reprocess\Directives\ScheduleTask\Templates\ReprocessProcessTaskTemplate.html" />
+    <Content Include="Reprocess\ModuleInitialization.js" />
     <Content Include="Reprocess\Services\APIServices\ReprocessDefinitionAPIService.js" />
     <Content Include="Reprocess\Services\ReprocessDefinitionService.js" />
     <Content Include="Reprocess\Views\ReprocessDefinition\ReprocessDefinitionEditor.html" />
