--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -140,9 +140,9 @@
     <add key="RulesDBConnStringKey"                             value="ConfigurationDBConnString"/>
     <add key="InvoiceDBConnStringKey"                           value="ConfigurationDBConnString"/>
     <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
-
+ 
     <add key="VR_AccountBalance_TransactionDBConnStringKey"     value="ConfigurationDBConnString"/>
-    <add key="WhS_AccountBalance_AccountBalanceDBConnStringKey" value="ConfigurationDBConnString"/>
+    <add key="WhS_AccountBalance_AccountBalanceDBConnStringKey" value="TOneV2DBConnString"/>
 
     <add key="TOneWhS_SPL_DBConnStringKey"                      value="TOneV2DBConnString"/>
     <add key="TOneWhS_TS_DBConnStringKey"                       value="ConfigurationDBConnString"/>
