Change the location of logging config tables to configuration database and removing user action audit
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40464

--- a/Vanrise/Code/Vanrise.Logging.SQL/Vanrise.Logging.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Logging.SQL/Vanrise.Logging.SQL.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Internals\LogAttribute.cs" />
+    <Compile Include="Internals\LogAttributeDataManager.cs" />
     <Compile Include="Internals\LogEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Internals\SQLDataManager.cs" />
