adding SQLLogger Parameters
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40473

--- a/Retail/Code/Retail.Runtime/App.config
+++ b/Retail/Code/Retail.Runtime/App.config
@@ -60,7 +60,8 @@
     <loggers>
       <logger name="SQLLogger" type="Vanrise.Logging.SQL.SQLLogger, Vanrise.Logging.SQL">
         <parameters>
-          <parameter name="ConnectionStringKey" value="LogDBConnString" />
+          <parameter name="LoggingConnectionStringKey" value="LogDBConnString" />
+          <parameter name="ConfigurationConnectionStringKey" value="ConfigurationDBConnString" />
         </parameters>
       </logger>
       <logger name="ConsoleLogger"  type="Vanrise.Common.ConsoleLogger, Vanrise.Common"></logger>
@@ -70,7 +71,7 @@
       <exceptionLogger name="DefaultExceptionLogger"  type="Vanrise.Common.DefaultExceptionLogger, Vanrise.Common"></exceptionLogger>
     </exceptionLoggers>
   </vanriseLogging>
-  
+
   <!--<connectionStrings>
     <add name="RetailCDRDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_CDR;User ID=Development;Password=dev!123"/>
     <add name="RetailAnalyticsDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_Analytics;User ID=Development;Password=dev!123"/>
@@ -104,7 +105,7 @@
     <add name="RetailCDRDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;"/>
     <add name="RetailAnalyticsDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;"/>-->
   </connectionStrings>
-  
+
   <appSettings file="appSettings.config">
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
     <add key="IsRuntimeService" value="false"/>
@@ -119,7 +120,7 @@
     <add key="SummaryTransformationDBConnStringKey"             value="TransactionDBConnString"/>
 
     <add key="QueueItemDBConnStringKey"                         value="QueueItemDBConnString"/>
-    
+
     <add key="BusinessProcessTrackingDBConnStringKey"           value="LogDBConnString"/>
     <add key="LoggingDBConnStringKey"                           value="LogDBConnString"/>
 
@@ -143,7 +144,7 @@
     <add key="ExposedConnectionStringNames" value="RetailCDRDBConnString,RetailAnalyticsDBConnString"/>
   </appSettings>
   <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">      
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
