--- a/Retail/Code/Retail.Web/Web.config
+++ b/Retail/Code/Retail.Web/Web.config
@@ -12,7 +12,8 @@
     <loggers>
       <logger name="SQLLogger" type="Vanrise.Logging.SQL.SQLLogger, Vanrise.Logging.SQL">
         <parameters>
-          <parameter name="ConnectionStringKey" value="LogDBConnString" />
+          <parameter name="LoggingConnectionStringKey" value="LogDBConnString" />
+          <parameter name="ConfigurationConnectionStringKey" value="ConfigurationDBConnString" />
         </parameters>
       </logger>
       <logger name="ConsoleLogger" type="Vanrise.Common.ConsoleLogger, Vanrise.Common"></logger>
@@ -40,7 +41,8 @@
   </connectionStrings>
 
   <appSettings file="appSettings.config">
-    <add key="Web_ExtendedModulesNames" value="Retail_Ringo,Retail_Zajil,Retail_Teles,VR_InvToAccBalanceRelation"/><!-- , separated module names to include in web bundle (e.g. Common,VR_Notification,VRInvoice) -->
+    <add key="Web_ExtendedModulesNames" value="Retail_Ringo,Retail_Zajil,Retail_Teles,VR_InvToAccBalanceRelation"/>
+    <!-- , separated module names to include in web bundle (e.g. Common,VR_Notification,VRInvoice) -->
     <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT" />
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
     <add key="TempPasswordValidity" value="24:00:00"/>
