--- a/Vanrise/Code/Vanrise.GenericData.Web/Vanrise.GenericData.Web.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.Web/Vanrise.GenericData.Web.csproj
@@ -457,12 +457,12 @@
     <Content Include="VR_GenericData\Directives\SummaryTransformationDefinition\vr-genericdata-summarygroupingcolumns-grid.js" />
     <Content Include="VR_GenericData\Directives\SummaryTransformationDefinition\vr-genericdata-summarytransformationdefinition-grid.js" />
     <Content Include="VR_GenericData\Directives\SummaryTransformationDefinition\vr-genericdata-summarytransformationdefinition-selector.js" />
-    <Content Include="VR_GenericData\Elements\Notification\DataRecord\Directive\Templates\DataRecordActionRuleExtendedSettingsTemplate.html" />
-    <Content Include="VR_GenericData\Elements\Notification\DataRecord\Directive\Templates\DataRecordActionRuleTypeSettingsTemplate.html" />
-    <Content Include="VR_GenericData\Elements\Notification\DataRecord\Directive\vr-genericdata-datarecordactionrule-extendedsettings.js" />
-    <Content Include="VR_GenericData\Elements\Notification\DataRecord\Directive\vr-genericdata-datarecordactionruletype-settings.js" />
-    <Content Include="VR_GenericData\Elements\Notification\DataRecord\QueueActivators\Directive\Template\QueueActivatorDataRecordCheckActionRulesTemplate.html" />
-    <Content Include="VR_GenericData\Elements\Notification\DataRecord\QueueActivators\Directive\vr-genericdata-queueactivator-datarecordcheckactionrules.js" />
+    <Content Include="VR_GenericData\Elements\Notification\DataRecord\Directive\Templates\DataRecordAlertRuleExtendedSettingsTemplate.html" />
+    <Content Include="VR_GenericData\Elements\Notification\DataRecord\Directive\Templates\DataRecordAlertRuleTypeSettingsTemplate.html" />
+    <Content Include="VR_GenericData\Elements\Notification\DataRecord\Directive\vr-genericdata-datarecordalertrule-extendedsettings.js" />
+    <Content Include="VR_GenericData\Elements\Notification\DataRecord\Directive\vr-genericdata-datarecordalertruletype-settings.js" />
+    <Content Include="VR_GenericData\Elements\Notification\DataRecord\QueueActivators\Directive\Templates\QueueActivatorDataRecordCheckAlertRulesTemplate.html" />
+    <Content Include="VR_GenericData\Elements\Notification\DataRecord\QueueActivators\Directive\vr-genericdata-queueactivator-datarecordcheckalertrules.js" />
     <Content Include="VR_GenericData\Elements\Notification\DataRecord\Services\DataRecordNotificationTypeSettingsService.js" />
     <Content Include="VR_GenericData\Elements\Notification\DataRecord\Views\AlertRuleRecordEditor.html" />
     <Content Include="VR_GenericData\Elements\Notification\DataRecord\Directive\Templates\AlertRuleRecordFilterManagementTemplate.html" />
