--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Controllers\OtherSaleRateController.cs" />
     <Compile Include="Controllers\SaleEntityZoneRoutingProductHistoryController.cs" />
     <Compile Include="Controllers\SalePriceListChangeController.cs" />
     <Compile Include="Controllers\SaleRateHistoryController.cs" />
@@ -334,9 +335,9 @@
     <Content Include="WhS_BusinessEntity\Directives\SalePriceListTemplate\vr-whs-be-salepricelisttemplate-settings-selective.js" />
     <Content Include="WhS_BusinessEntity\Directives\SalePriceList\Templates\SalePriceListGridTemplate.html" />
     <Content Include="WhS_BusinessEntity\Directives\SalePriceList\vr-whs-be-salepricelist-grid.js" />
-    <Content Include="WhS_BusinessEntity\Directives\SaleRate\Templates\SaleOtherRateGridTemplate.html" />
+    <Content Include="WhS_BusinessEntity\Directives\SaleRate\Templates\OtherSaleRateGridTemplate.html" />
     <Content Include="WhS_BusinessEntity\Directives\SaleRate\Templates\SaleRateGridTemplate.html" />
-    <Content Include="WhS_BusinessEntity\Directives\SaleRate\vr-whs-be-saleotherrate-grid.js" />
+    <Content Include="WhS_BusinessEntity\Directives\SaleRate\vr-whs-be-othersalerate-grid.js" />
     <Content Include="WhS_BusinessEntity\Directives\SaleRate\vr-whs-be-salerate-grid.js" />
     <Content Include="WhS_BusinessEntity\Directives\SaleZone\Templates\SaleZoneGridTemplate.html" />
     <Content Include="WhS_BusinessEntity\Directives\SaleZone\vr-whs-be-salezone-grid.js" />
@@ -420,6 +421,7 @@
     <Content Include="WhS_BusinessEntity\Images\ReOpen.png" />
     <Content Include="WhS_BusinessEntity\Images\Zone.png" />
     <Content Include="WhS_BusinessEntity\ModuleInitialization.js" />
+    <Content Include="WhS_BusinessEntity\Services\APIServices\OtherSaleRateAPIService.js" />
     <Content Include="WhS_BusinessEntity\Services\APIServices\SaleEntityZoneAPIService.js" />
     <Content Include="WhS_BusinessEntity\Services\APIServices\SaleEntityZoneRoutingProductHistoryAPIService.js" />
     <Content Include="WhS_BusinessEntity\Services\APIServices\SalePriceListChangeAPIService.js" />
