--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/TOne.WhS.RouteSync.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/TOne.WhS.RouteSync.Web.csproj
@@ -174,6 +174,7 @@
     <Content Include="WhS_RouteSync\Directives\SwitchRouteSynchronizer\Templates\SwitchRouteSynchronizerTemplate.html" />
     <Content Include="WhS_RouteSync\Directives\SwitchRouteSynchronizer\whs-routesync-switchroutesynchronizer-settings.js" />
     <Content Include="WhS_RouteSync\Directives\Switch\whs-routesync-switch-selector.js" />
+    <Content Include="WhS_RouteSync\ModuleInitailization.js" />
     <Content Include="WhS_RouteSync\Services\APIServices\RouteSyncDefinitionAPIService.js" />
     <Content Include="WhS_RouteSync\Services\APIServices\RadiusDataManagerSettingAPIService.js" />
     <Content Include="WhS_RouteSync\Services\APIServices\SwitchAPIService.js" />
