implementing object tracking drill down in route rule and option rule
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40506

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/TOne.WhS.Routing.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/TOne.WhS.Routing.Web.csproj
@@ -274,6 +274,7 @@
     <Content Include="WhS_Routing\Directives\TransformationSteps\SupplierCodeMatchStep\Templates\SupplierCodeMatchStepPreviewTemplate.html" />
     <Content Include="WhS_Routing\Directives\TransformationSteps\SupplierCodeMatchStep\vr-whs-routing-datatransformation-suppliercodematch-preview.js" />
     <Content Include="WhS_Routing\Directives\TransformationSteps\SupplierCodeMatchStep\vr-whs-routing-datatransformation-suppliercodematch.js" />
+    <Content Include="WhS_Routing\ModuleInitialization.js" />
     <Content Include="WhS_Routing\Services\APIServices\CustomerRouteAPIService.js" />
     <Content Include="WhS_Routing\Services\APIServices\RouteOptionRuleAPIService.js" />
     <Content Include="WhS_Routing\Services\APIServices\RPRouteAPIService.js" />
