adding logger viewed
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40513

--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/TOne.WhS.Deal.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/TOne.WhS.Deal.Web.csproj
@@ -210,6 +210,7 @@
     <Content Include="WhS_Deal\Directives\ZoneRateEval\vr-whs-deal-zonerateeval-avg.js" />
     <Content Include="WhS_Deal\Directives\ZoneRateEval\vr-whs-deal-zonerateeval-max.js" />
     <Content Include="WhS_Deal\Directives\ZoneRateEval\vr-whs-deal-zonerateeval-traffic.js" />
+    <Content Include="WhS_Deal\ModuleInitialization.js" />
     <Content Include="WhS_Deal\Services\APIServices\VolCommitmentDealAPIService.js" />
     <Content Include="WhS_Deal\Services\APIServices\SwapDealAPIService.js" />
     <Content Include="WhS_Deal\Services\APIServices\SwapDealAnalysisAPIService.js" />
