--- a/Demo.project/Code/Demo.Web/Web.config
+++ b/Demo.project/Code/Demo.Web/Web.config
@@ -44,7 +44,7 @@
     <add key="QueueDBConnStringKey" value="TransactionDBConnString" />
     <add key="QueueItemDBConnStringKey" value="QueueItemDBConnString" />
     <add key="DownloadCodeGroupTemplatePath" value="/Client/Modules/Demo_Module/Templates/CodeGroupTemplate.xlsx" />
-
+    <add key="BigDataServiceDBConnStringKey"                    value="TransactionDBConnString"/>
     <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
     <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
     <add key="QueueingConfigDBConnStringKey" value="ConfigurationDBConnString"/>
