--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Entities/TOne.WhS.AccountBalance.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Entities/TOne.WhS.AccountBalance.Entities.csproj
@@ -54,6 +54,7 @@
     <Compile Include="FinancialAccountInfoFilter.cs" />
     <Compile Include="FinancialAccountIsCustomerAccountContext.cs" />
     <Compile Include="FinancialAccountIsSupplierAccountContext.cs" />
+    <Compile Include="FinancialAccountEditorRuntime.cs" />
     <Compile Include="FinancialValidationData.cs" />
     <Compile Include="GetUsageTransactionTypesContext.cs" />
     <Compile Include="FinancialAccount.cs" />
