Implement OnBPExecutionCompleted for ExecuteNotification BP
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40538

--- a/Vanrise/Code/Vanrise.Notification.Business/Vanrise.Notification.Business.csproj
+++ b/Vanrise/Code/Vanrise.Notification.Business/Vanrise.Notification.Business.csproj
@@ -49,6 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BPDefinitionExtendedSettings\ExecuteNotificationBPDefinitionExtendedSettings.cs" />
     <Compile Include="Filters\VRAlertLevelBEDefinitionFilter.cs" />
     <Compile Include="VRAlertLevelBEDefinitionSettings.cs" />
     <Compile Include="VRAlertLevelManager.cs" />
