--- a/Retail/Code/Retail.Web/Web.config
+++ b/Retail/Code/Retail.Web/Web.config
@@ -37,7 +37,10 @@
     <add name="RetailCDRDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_CDR;User ID=Development;Password=dev!123"/>
     <add name="RetailAnalyticsDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_Analytics;User ID=Development;Password=dev!123"/>
 
-    <add name="VRNotificationTransactionDBConnString" connectionString="Data Source=.;Initial Catalog=Retail_Dev_Transaction;User ID=sa; Password=p@ssw0rd" />-->
+    <add name="VRNotificationTransactionDBConnString" connectionString="Data Source=.;Initial Catalog=Retail_Dev_Transaction;User ID=sa; Password=p@ssw0rd" />
+    <add name="RingoDBConnString" connectionString="Server=192.168.110.185;User ID=development;Password=dev!123;Database=Retail_Dev_Ringo;"/>
+
+    -->
   </connectionStrings>
 
   <appSettings file="appSettings.config">
@@ -46,7 +49,7 @@
     <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT" />
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
     <add key="TempPasswordValidity" value="24:00:00"/>
-    
+
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
@@ -89,6 +92,7 @@
     <add key="MNPReportPath" value="/Client/Modules/Retail_Ringo/Reports/MNP Report.xls"/>
 
     <add key="ExposedConnectionStringNames" value="RetailCDRDBConnString,RetailAnalyticsDBConnString"/>
+    <add key="RingoDBConnStringKey" value="RingoDBConnString"/>
   </appSettings>
 
   <system.web>
