--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Business/TOne.WhS.Invoice.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Business/TOne.WhS.Invoice.Business.csproj
@@ -47,6 +47,10 @@
     <Reference Include="Vanrise.Analytic.Entities">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Analytic.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Caching, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Caching.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
@@ -77,7 +81,8 @@
     <Compile Include="ConfigManager.cs" />
     <Compile Include="Extensions\CarrierPartnerSettings.cs" />
     <Compile Include="Extensions\CustomerInvoiceGenerator.cs" />
-    <Compile Include="Extensions\CarrierInvoiceSettings.cs" />
+    <Compile Include="Extensions\CustomerInvoiceAccountSettings.cs" />
+    <Compile Include="Extensions\CustomerInvoiceSettings.cs" />
     <Compile Include="Extensions\InvoiceGeneratorActionPartnerCondition.cs" />
     <Compile Include="Extensions\SupplierInvoiceGenerator.cs" />
     <Compile Include="InvoiceAccountManager.cs" />
@@ -93,6 +98,10 @@
     <ProjectReference Include="..\TOne.WhS.BusinessEntity.Entities\TOne.WhS.BusinessEntity.Entities.csproj">
       <Project>{0923754d-484c-48f7-9284-be9b6b9d5449}</Project>
       <Name>TOne.WhS.BusinessEntity.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.Invoice.Data\TOne.WhS.Invoice.Data.csproj">
+      <Project>{23e57496-f040-4b3f-9544-dd158b4c17f1}</Project>
+      <Name>TOne.WhS.Invoice.Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\TOne.WhS.Invoice.Entities\TOne.WhS.Invoice.Entities.csproj">
       <Project>{a3474129-600a-44fa-a71c-bc746f104a39}</Project>
