--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Data.SQL/TOne.WhS.Invoice.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Data.SQL/TOne.WhS.Invoice.Data.SQL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A3474129-600A-44FA-A71C-BC746F104A39}</ProjectGuid>
+    <ProjectGuid>{9B102F23-5C14-4C8B-B912-CF22812B41D6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TOne.WhS.Invoice.Entities</RootNamespace>
-    <AssemblyName>TOne.WhS.Invoice.Entities</AssemblyName>
+    <RootNamespace>TOne.WhS.Invoice.Data.SQL</RootNamespace>
+    <AssemblyName>TOne.WhS.Invoice.Data.SQL</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -41,40 +41,30 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Vanrise.Entities">
-      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
+    <Reference Include="Vanrise.Common">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Invoice.Entities">
-      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Invoice.Entities.dll</HintPath>
+    <Reference Include="Vanrise.Data">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Data.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Invoice.MainExtensions">
-      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Invoice.MainExtensions.dll</HintPath>
+    <Reference Include="Vanrise.Data.SQL">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Data.SQL.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomerInvoiceDetails.cs" />
-    <Compile Include="CustomerInvoiceItemDetails.cs" />
-    <Compile Include="InvoiceAccount\CarrierInvoiceAccountData.cs" />
-    <Compile Include="InvoiceAccount\InvoiceAccountDetail.cs" />
-    <Compile Include="InvoiceAccount\InvoiceAccountInfo.cs" />
-    <Compile Include="InvoiceAccount\InvoiceAccountInfoFilter.cs" />
-    <Compile Include="InvoiceAccount\InvoiceAccount.cs" />
-    <Compile Include="InvoiceAccount\InvoiceAccountQuery.cs" />
-    <Compile Include="InvoiceAccount\InvoiceAccountSettings.cs" />
-    <Compile Include="InvoiceCarrier.cs" />
-    <Compile Include="InvoiceCarrierFilter.cs" />
+    <Compile Include="InvoiceAccountDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RDLCCustomerInvoiceItemDetails.cs" />
-    <Compile Include="SupplierInvoiceDetails.cs" />
-    <Compile Include="SupplierInvoiceItemDetails.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TOne.WhS.BusinessEntity.Entities\TOne.WhS.BusinessEntity.Entities.csproj">
-      <Project>{0923754d-484c-48f7-9284-be9b6b9d5449}</Project>
-      <Name>TOne.WhS.BusinessEntity.Entities</Name>
+    <ProjectReference Include="..\TOne.WhS.Invoice.Data\TOne.WhS.Invoice.Data.csproj">
+      <Project>{23e57496-f040-4b3f-9544-dd158b4c17f1}</Project>
+      <Name>TOne.WhS.Invoice.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.Invoice.Entities\TOne.WhS.Invoice.Entities.csproj">
+      <Project>{a3474129-600a-44fa-a71c-bc746f104a39}</Project>
+      <Name>TOne.WhS.Invoice.Entities</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
