--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/TOne.WhS.Invoice.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/TOne.WhS.Invoice.Web.csproj
@@ -170,6 +170,14 @@
     <Content Include="WhS_Invoice\Constants\ModuleConfig.js" />
     <Content Include="WhS_Invoice\Directives\Extensions\InvoiceGeneratorFilterCondition\Templates\PartnerConditionTemplate.html" />
     <Content Include="WhS_Invoice\Directives\Extensions\InvoiceGeneratorFilterCondition\vr-invoicetype-invoicegeneratorfiltercondition-partner.js" />
+    <Content Include="WhS_Invoice\Directives\InvoiceAccountTypes\CustomerInvoice\Templates\CustomerInvoiceSettingsDefinitionTemplate.html" />
+    <Content Include="WhS_Invoice\Directives\InvoiceAccountTypes\CustomerInvoice\Templates\CustomerInvoiceSettingsRuntimeTemplate.html" />
+    <Content Include="WhS_Invoice\Directives\InvoiceAccountTypes\CustomerInvoice\whs-invoicetype-definition-customerinvoicesettings.js" />
+    <Content Include="WhS_Invoice\Directives\InvoiceAccountTypes\CustomerInvoice\whs-invoicetype-runtime-customerinvoicesettings.js" />
+    <Content Include="WhS_Invoice\Directives\InvoiceAccount\Templates\InvoiceAccountGridTemplate.html" />
+    <Content Include="WhS_Invoice\Directives\InvoiceAccount\Templates\InvoiceAccountSearch.html" />
+    <Content Include="WhS_Invoice\Directives\InvoiceAccount\whs-invoice-invoiceaccount-grid.js" />
+    <Content Include="WhS_Invoice\Directives\InvoiceAccount\whs-invoice-invoiceaccount-search.js" />
     <Content Include="WhS_Invoice\Directives\InvoiceCarrier\whs-invoice-carrier-customer-filter-selector.js" />
     <Content Include="WhS_Invoice\Directives\InvoiceCarrier\whs-invoice-carrier-customer-selector.js" />
     <Content Include="WhS_Invoice\Directives\InvoiceCarrier\whs-invoice-carrier-selector.js" />
@@ -184,7 +192,11 @@
     <Content Include="WhS_Invoice\Directives\MainExtensions\SupplierInvoice\whs-invoice-invoicetype-supplierinvoicegenerator.js" />
     <Content Include="WhS_Invoice\ModuleInitialization.js" />
     <Content Include="WhS_Invoice\Reports\Reporting.aspx" />
+    <Content Include="WhS_Invoice\Services\APIServices\InvoiceAccountAPIService.js" />
     <Content Include="WhS_Invoice\Services\APIServices\InvoiceAPIService.js" />
+    <Content Include="WhS_Invoice\Services\InvoiceAccountService.js" />
+    <Content Include="WhS_Invoice\Views\InvoiceAccountEditor.html" />
+    <Content Include="WhS_Invoice\Views\InvoiceAccountEditorController.js" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
