--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Entities/TOne.WhS.Invoice.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Entities/TOne.WhS.Invoice.Entities.csproj
@@ -56,11 +56,13 @@
     <Compile Include="CustomerInvoiceItemDetails.cs" />
     <Compile Include="InvoiceAccount\CarrierInvoiceAccountData.cs" />
     <Compile Include="InvoiceAccount\InvoiceAccountDetail.cs" />
+    <Compile Include="InvoiceAccount\InvoiceAccountEditorRuntime.cs" />
     <Compile Include="InvoiceAccount\InvoiceAccountInfo.cs" />
     <Compile Include="InvoiceAccount\InvoiceAccountInfoFilter.cs" />
     <Compile Include="InvoiceAccount\InvoiceAccount.cs" />
     <Compile Include="InvoiceAccount\InvoiceAccountQuery.cs" />
     <Compile Include="InvoiceAccount\InvoiceAccountSettings.cs" />
+    <Compile Include="InvoiceAccount\InvoiceValidationData.cs" />
     <Compile Include="InvoiceCarrier.cs" />
     <Compile Include="InvoiceCarrierFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
