--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/TOne.WhS.Invoice.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/TOne.WhS.Invoice.Web.csproj
@@ -115,6 +115,10 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.2\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
@@ -140,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Controllers\InvoiceAccountController.cs" />
     <Compile Include="Controllers\InvoiceController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WhS_Invoice\Reports\Reporting.aspx.cs">
