--- a/Vanrise/Code/Vanrise.DataParser.Web/Vanrise.DataParser.Web.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.Web/Vanrise.DataParser.Web.csproj
@@ -108,16 +108,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Controllers\ParserTypeController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="DataParser\Directives\" />
-    <Folder Include="DataParser\Services\" />
-    <Folder Include="DataParser\Views\" />
+    <Folder Include="VR_DataParser\Elements\ParserType\Directives\" />
+    <Folder Include="VR_DataParser\Elements\ParserType\Services\" />
+    <Folder Include="VR_DataParser\Elements\ParserType\Views\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DataParser\Constants\ModuleConfig.js" />
+    <Content Include="VR_DataParser\Constants\ModuleConfig.js" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
@@ -143,6 +143,10 @@
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
       <Project>{cfecfd8a-51f6-4020-9f80-fb334684fa3d}</Project>
       <Name>Vanrise.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Web.Base\Vanrise.Web.Base.csproj">
+      <Project>{c527c7b2-a481-4d1d-b25a-4a540e812153}</Project>
+      <Name>Vanrise.Web.Base</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
